--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <link rel="icon" type="image/x-icon" href="/img/icons8-favicon-48.png">
 
   <title>Github Favorites</title>
-
-  <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
 
@@ -22,7 +20,7 @@
     <div class="search">
       <label class="sr-only" for="input-search">Usuário do Github</label>
       <input  id="input-search" type="text" placeholder="Usuário do Github">
-      <button>&plus;</button>
+      <button id="button1">&plus;</button>
     </div>
   </header>
 
@@ -41,5 +39,5 @@
   </table>
 
 </body>
-
+<script src="js/main.js" type="module" defer></script>
 </html>
